# ppfx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  ProcessPPFX.py  README.md  hp_uncer.C  ppfx_job.sh  setup.sh  setup_for_dune.sh  setup_for_grid.sh  setup_for_icarus.sh  setup_for_nova.sh  submit_ppfxjobs.py
Robertscripts/: ProcessPPFX.py  ppfx_job.sh  setup.sh
data/: CMakeLists.txt
data/BINS/: CMakeLists.txt  MIPPNumiData_K_PI_Bins.xml  MIPPNumiData_PIM_Bins.xml  MIPPNumiData_PIP_Bins.xml  ThinTargetBarton_pC_pi_Bins.xml  ThinTargetLowxF_pC_k_Bins.xml  ThinTarget_K_PI_Bins.xml  ThinTarget_MesonIncident.xml  ThinTarget_pC_n_Bins.xml  (+11 more)
doxygen/: config_doxygen
html/: _absorption_d_p_i_p_reweighter_8cpp.html  _absorption_d_p_i_p_reweighter_8cpp_source.html  _absorption_d_p_i_p_reweighter_8h.html  _absorption_d_p_i_p_reweighter_8h_source.html  _absorption_d_v_o_l_reweighter_8cpp.html  _absorption_d_v_o_l_reweighter_8cpp_source.html  _absorption_d_v_o_l_reweighter_8h.html  _absorption_d_v_o_l_reweighter_8h_source.html  _absorption_i_c_reweighter_8cpp.html  _absorption_i_c_reweighter_8cpp_source.html  _absorption_i_c_reweighter_8h.html  _absorption_i_c_reweighter_8h_source.html  _attenuation_m_c_8cpp.html  _attenuation_m_c_8cpp_source.html  _attenuation_m_c_8h.html  _attenuation_m_c_8h_source.html  _central_values_and_uncertainties_8cpp.html  _central_values_and_uncertainties_8cpp_source.html  _central_values_and_uncertainties_8h.html  _central_values_and_uncertainties_8h_source.html  _common_i_map_includes_8h.html  _common_i_map_includes_8h_source.html  _exceptions_8h.html  _exceptions_8h_source.html  _fill_i_map_hists_8cpp.html  _fill_i_map_hists_8cpp_source.html  _fill_i_map_hists_8h.html  _fill_i_map_hists_8h_source.html  _i_interaction_chain_reweighting_8h.html  _i_interaction_chain_reweighting_8h_source.html  _i_interaction_reweighting_8h.html  _i_interaction_reweighting_8h_source.html  _interaction_chain_data_8cpp.html  _interaction_chain_data_8cpp_source.html  _interaction_chain_data_8h.html  _interaction_chain_data_8h_source.html  _interaction_data_8cpp.html  _interaction_data_8cpp_source.html  _interaction_data_8h.html  _interaction_data_8h_source.html  (+288 more)
include/: AbsorptionDPIPReweighter.h  AbsorptionDVOLReweighter.h  AbsorptionICReweighter.h  AbsorptionReweighter.h  AttenuationMC.h  AttenuationReweighter.h  CMakeLists.txt  CentralValuesAndUncertainties.h  CommonIMapIncludes.h  DataHistos.h  Exceptions.h  ExtractInfo.h  FillIMapHists.h  HistoContainer.h  IInteractionChainReweighting.h  IInteractionReweighting.h  InteractionChainData.h  InteractionData.h  LinkDef.h  MIPPNumiKaonYieldsReweighter.h  MIPPNumiKaonsYieldsReweighter.h  MIPPNumiMC.h  MIPPNumiPionYieldsReweighter.h  MIPPNumiYieldsBins.h  MIPPNumiYieldsReweighter.h  MIPPThinTargetReweighter.h  MakeReweight.h  NA49Reweighter.h  NuWeight.h  NucleonAbsorptionOutOfTargetReweighter.h  Numi2Pdg.h  OtherAbsorptionOutOfTargetReweighter.h  OtherReweighter.h  PDGParticleCodes.h  ParameterTable.h  ParticlesThroughVolumesData.h  ReweightDriver.h  TargetAttenuationReweighter.h  TargetData.h  TheoryThinTargetReweighter.h  (+20 more)
latex/: _absorption_d_p_i_p_reweighter_8cpp.tex  _absorption_d_p_i_p_reweighter_8h.tex  _absorption_d_v_o_l_reweighter_8cpp.tex  _absorption_d_v_o_l_reweighter_8h.tex  _absorption_i_c_reweighter_8cpp.tex  _absorption_i_c_reweighter_8h.tex  _attenuation_m_c_8cpp.tex  _attenuation_m_c_8h.tex  _central_values_and_uncertainties_8cpp.tex  _central_values_and_uncertainties_8h.tex  _common_i_map_includes_8h.tex  _exceptions_8h.tex  _fill_i_map_hists_8cpp.tex  _fill_i_map_hists_8h.tex  _i_interaction_chain_reweighting_8h.tex  _i_interaction_reweighting_8h.tex  _interaction_chain_data_8cpp.tex  _interaction_chain_data_8h.tex  _interaction_data_8cpp.tex  _interaction_data_8h.tex  _m_i_p_p_numi_kaon_yields_reweighter_8cpp.tex  _m_i_p_p_numi_kaon_yields_reweighter_8h.tex  _m_i_p_p_numi_m_c_8cpp.tex  _m_i_p_p_numi_m_c_8h.tex  _m_i_p_p_numi_pion_yields_reweighter_8cpp.tex  _m_i_p_p_numi_pion_yields_reweighter_8h.tex  _m_i_p_p_numi_yields_bins_8cpp.tex  _m_i_p_p_numi_yields_bins_8h.tex  _make_reweight_8cpp.tex  _make_reweight_8h.tex  _nu_weight_8cpp.tex  _nu_weight_8h.tex  _nucleon_absorption_out_of_target_reweighter_8cpp.tex  _nucleon_absorption_out_of_target_reweighter_8h.tex  _numi2_pdg_8cpp.tex  _numi2_pdg_8h.tex  _other_absorption_out_of_target_reweighter_8cpp.tex  _other_absorption_out_of_target_reweighter_8h.tex  _other_reweighter_8cpp.tex  _other_reweighter_8h.tex  (+113 more)
local/: CMakeLists.txt
scripts/: CMakeLists.txt  band.C  compareRWPlots.C  create_imaplist.py  grid_submit.sh  hp_uncer.C  imap_job.sh  inputs.xml  inputs_both.xml  inputs_default.xml  inputs_imap.xml  inputs_na61.xml  inputs_nomipp.xml  nu_error.C  run_fluxpack.sh  rwgt_job.sh  submit_imap_jobs.sh  submit_imap_jobs2.sh  submit_rwgt_jobs.sh  submit_rwgt_jobs2.sh
src/: AbsorptionDPIPReweighter.cpp  AbsorptionDVOLReweighter.cpp  AbsorptionICReweighter.cpp  AbsorptionReweighter.cpp  AttenuationMC.cpp  AttenuationReweighter.cpp  CMakeLists.txt  CentralValuesAndUncertainties.cpp  CreateIMapHists.C  CreateIMapPlots.C  DataHistos.cpp  ExtractInfo.cpp  FillIMapHists.cpp  HistoContainer.cpp  InteractionChainData.cpp  InteractionData.cpp  MIPPNumiKaonYieldsReweighter.cpp  MIPPNumiKaonsYieldsReweighter.cpp  MIPPNumiMC.cpp  MIPPNumiPionYieldsReweighter.cpp  MIPPNumiYieldsBins.cpp  MIPPNumiYieldsReweighter.cpp  MIPPThinTargetReweighter.cpp  MakeReweight.cpp  Makefile  NA49Reweighter.cpp  NuWeight.cpp  NucleonAbsorptionOutOfTargetReweighter.cpp  Numi2Pdg.cpp  OtherAbsorptionOutOfTargetReweighter.cpp  OtherReweighter.cpp  ParameterTable.cpp  ParticlesThroughVolumesData.cpp  PrintMaterials.C  ReweightDriver.cpp  TargetAttenuationReweighter.cpp  TargetData.cpp  TheoryThinTargetReweighter.cpp  ThinTargetBins.cpp  ThinTargetMC.cpp  (+27 more)
uncertainties/: CMakeLists.txt  Parameters_default.xml  Parameters_high.xml  Parameters_low.xml  Parameters_medium.xml  Parameters_mediumBYDET.xml  Parameters_noCorr.xml  Parameters_uhigh.xml  Parameters_uhighBYDET.xml
ups/: product_deps
(+166 files in other folders)
